objects/Service_Interface_Endpoint_Setting__mdt.object
<CustomObject>
    <description>Holds details for the integration between COM2 and Customer Master.</description>
    <fields>
        <fullName>AccessToken_URL__c</fullName>
        <label>AccessToken URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apikey__c</fullName>
        <label>Apikey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientID__c</fullName>
        <label>ClientID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientSecret__c</fullName>
        <label>ClientSecret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endpoint_URL__c</fullName>
        <label>Endpoint URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupNo_Req_Endpoint__c</fullName>
        <description>This field points to the end point url for Group Number generation service for CM.</description>
        <label>GroupNo Req Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Host__c</fullName>
        <label>Host</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsSandbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSandbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Named_Credential__c</fullName>
        <description>Holds Named credential details for the associated integration end point.</description>
        <label>Named Credential</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Service Interface Endpoint Setting</label>
    <pluralLabel>Service Interface Endpoint Settings</pluralLabel>
</CustomObject>